@@ -1,7 +1,9 @@
 shady-KISS-skin History
 -------------------------------------------
-2016-02-29:
 
+2016-02-29:
+- Fixed background of separator in displaymenuschedules
+- Added presenteventtitle to listitems in displaymenuchannel without currentelement
 
 2016-02-27:
 - Added presenteventtitle to listitems in displaymenuchannel
